--- a/_sass/_utils.scss
+++ b/_sass/_utils.scss
@@ -11,6 +11,10 @@
     margin-bottom: 0
 }
 
+.img-fluid {
+	width: 100%
+}
+
 .mt-1 {
 	margin-top: 10px;
 }
