--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,6 +27,7 @@ $content-width:    1080px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
+$on-tablet:          768px;
 $on-mobile:        500px;
 
 
